добавление ALLWOED_HOSTS в .env

--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@
 
 DEBUG=True
 SECRET_KEY=django-insecure-zdgn7&i+g_4cug8d^ss54*d+n!3v$81aooq&h%864d+@jxf(hu
+
+# Поддержка нескольких доменов через запятую
+ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
+
 DB_NAME=okna
 DB_USER=andy
 DB_PASSWORD=Bogdan682356
