--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-; env для базы данных на убунте селектел для окон
+# env для базы данных на убунте селектел для окон
 
 
 DEBUG=True
@@ -13,12 +13,12 @@ DB_PASSWORD=Bogdan682356
 DB_HOST=localhost
 DB_PORT=5432
 
-; env для бд на моём компе
+# env для бд на моём компе
 
-; DEBUG=True
-; SECRET_KEY=django-insecure-zdgn7&i+g_4cug8d^ss54*d+n!3v$81aooq&h%864d+@jxf(hu
-; DB_NAME=django_okna_db
-; DB_USER=postgres
-; DB_PASSWORD=6823
-; DB_HOST=localhost
-; DB_PORT=5432
+# DEBUG=True
+# SECRET_KEY=django-insecure-zdgn7&i+g_4cug8d^ss54*d+n!3v$81aooq&h%864d+@jxf(hu
+# DB_NAME=django_okna_db
+# DB_USER=postgres
+# DB_PASSWORD=6823
+# DB_HOST=localhost
+# DB_PORT=5432
