изменил .env для запуска на компьютере на винде

--- a/.env
+++ b/.env
@@ -5,20 +5,21 @@ DEBUG=True
 SECRET_KEY=django-insecure-zdgn7&i+g_4cug8d^ss54*d+n!3v$81aooq&h%864d+@jxf(hu
 
 # Поддержка нескольких доменов через запятую
-ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
-
-DB_NAME=okna
-DB_USER=andy
-DB_PASSWORD=Bogdan682356
-DB_HOST=localhost
-DB_PORT=5432
+; ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
+;
+; DB_NAME=okna
+; DB_USER=andy
+; DB_PASSWORD=Bogdan682356
+; DB_HOST=localhost
+; DB_PORT=5432
 
 # env для бд на моём компе
+ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
 
-# DEBUG=True
-# SECRET_KEY=django-insecure-zdgn7&i+g_4cug8d^ss54*d+n!3v$81aooq&h%864d+@jxf(hu
-# DB_NAME=django_okna_db
-# DB_USER=postgres
-# DB_PASSWORD=6823
-# DB_HOST=localhost
-# DB_PORT=5432
+DEBUG=True
+SECRET_KEY=django-insecure-zdgn7&i+g_4cug8d^ss54*d+n!3v$81aooq&h%864d+@jxf(hu
+DB_NAME=django_okna_db
+DB_USER=postgres
+DB_PASSWORD=6823
+DB_HOST=localhost
+DB_PORT=5432
