--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ SECRET_KEY=django-insecure-zdgn7&i+g_4cug8d^ss54*d+n!3v$81aooq&h%864d+@jxf(hu
 ; DB_HOST=localhost
 ; DB_PORT=5432
 
-# env для бд на моём компе
+# env для бд на моём компьютере
 ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
 
 DEBUG=True
