проба бекапов на убунте

--- a/.env
+++ b/.env
@@ -13,10 +13,10 @@ DB_HOST=localhost
 DB_PORT=5432
 
 # env для бд на моём компьютере
-ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
-
-DB_NAME=django_okna_db
-DB_USER=postgres
-DB_PASSWORD=6823
-DB_HOST=localhost
-DB_PORT=5432
+#ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
+#
+#DB_NAME=django_okna_db
+#DB_USER=postgres
+#DB_PASSWORD=6823
+#DB_HOST=localhost
+#DB_PORT=5432
