allowed host in .env для доменного имени

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DEBUG=True
 SECRET_KEY=django-insecure-zdgn7&i+g_4cug8d^ss54*d+n!3v$81aooq&h%864d+@jxf(hu
 
 # Поддержка нескольких доменов через запятую
-ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
+ALLOWED_HOSTS=www.oknavmir35.ru,oknavmir35.ru
 
 DB_NAME=okna
 DB_USER=andy
@@ -13,10 +13,10 @@ DB_HOST=localhost
 DB_PORT=5432
 
 # env для бд на моём компьютере
-#ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
-#
-#DB_NAME=django_okna_db
-#DB_USER=postgres
-#DB_PASSWORD=6823
-#DB_HOST=localhost
-#DB_PORT=5432
+ALLOWED_HOSTS=localhost,37.9.5.136,127.0.0.1
+
+DB_NAME=django_okna_db
+DB_USER=postgres
+DB_PASSWORD=6823
+DB_HOST=localhost
+DB_PORT=5432
